# payments-processor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: 2_reports.md  3_customization_guide.md  setup_guide.md
payments_processor/: constants.py  hooks.py  install.py  modules.txt  setup.py  uninstall.py
payments_processor/payments_processor/constants/: custom_fields.py  email_template.py  roles.py
payments_processor/payments_processor/doctype/payment_processor_setting/: payment_processor_setting.js  payment_processor_setting.json  payment_processor_setting.py  payment_processor_setting_list.js  test_payment_processor_setting.py
payments_processor/payments_processor/doctype/payments_processor_configuration/: payments_processor_configuration.js  payments_processor_configuration.json  payments_processor_configuration.py  test_payments_processor_configuration.py
payments_processor/payments_processor/report/payments_processor/: payments_processor.js  payments_processor.json  payments_processor.py
payments_processor/payments_processor/report/upcoming_invoice_payment/: upcoming_invoice_payment.js  upcoming_invoice_payment.json  upcoming_invoice_payment.py
payments_processor/payments_processor/setup/: __init__.py
payments_processor/payments_processor/utils/: __init__.py  automation.py  test_automation.py
payments_processor/tests/: __init__.py  test_records.json
